chime/Ingress/chime.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: >
      # Inject Google Tag Manager:


      proxy_set_header Accept-Encoding ""; # upstream compression must be
      disabled


      sub_filter '</head>'
      '<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({"gtm.start": new
      Date().getTime(),event:"gtm.js"});var f=d.getElementsByTagName(s)[0],
      j=d.createElement(s),dl=l!="dataLayer"?"&l="+l:"";j.async=true;j.src="https://www.googletagmanager.com/gtm.js?id="+i+dl;f.parentNode.insertBefore(j,f);
      })(window,document,"script","dataLayer","GTM-KBZ6ZKX");</script></head>';


      sub_filter '</body>' '<noscript><iframe
      src="https://www.googletagmanager.com/ns.html?id=GTM-KBZ6ZKX" height="0"
      width="0"
      style="display:none;visibility:hidden"></iframe></noscript></body>';
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
  labels:
    app.kubernetes.io/instance: chime
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: chime
    app.kubernetes.io/version: 1.0.0
    helm.sh/chart: chime-0.1.0
  name: chime
  namespace: chime
spec:
  rules:
    - host: penn-chime.phl.io
      http:
        paths:
          - backend:
              serviceName: chime
              servicePort: 80
            path: /
  tls:
    - hosts:
        - penn-chime.phl.io
      secretName: penn-chime-tls
